--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,9 +14,11 @@ html {
     box-sizing: inherit;
 }
 body {
-    background-color: #1C1C1D;
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
     min-height: 100vh;    
     font-family: 'Lato', sans-serif;
+    color: #fff;
 }
 
 .header h1 {
@@ -35,72 +37,87 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 5rem ;
-    background-color: var(--blue);
     border-radius: 1rem;
     padding: 8rem 5rem 4rem 5rem;
     gap: 5rem;
 }
-.sombra {
-    -webkit-box-shadow: 4px 4px 22px -7px rgba(0,0,0,1);
-    -moz-box-shadow: 4px 4px 22px -7px rgba(0,0,0,1);
-    box-shadow: 4px 4px 22px -7px rgba(0,0,0,1);
-    border-radius: 1.5rem;
-}
 
-.info {
+.info { margin: 1rem 2rem 0 5rem; }
+
+.formulario {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    margin-top: -3rem;
-    margin-right: 5rem;
 }
-.info label {
-    font-size: 1.5rem;
+.formulario label {
+    font-size: 1.3rem;
+    font-weight: var(--fontBold);
+}
+.formulario input {
+    border: 1px solid var(--green);
     font-weight: var(--fontBold);
     text-align: center;
 }
-.info input {
+.formulario input, button {
+    width: 100%;
+    height: 3rem;
+    border-radius: .5rem;
+}
+.formulario button {
     border: none;
-    border-radius: .5rem;
-    padding: .5rem 1rem;
-}
-.info button {
-    border:2px solid var(--blue);
-    border-radius: .5rem;
-    background-color: #fff;
-    color: #000;
-    padding: .5rem;
+    color: var(--blue);
     font-weight: var(--fontBold);
-    font-size: 1rem;
-    width: 8rem;
-    cursor: pointer;
+    font-size: 1.2rem;
+    text-transform: uppercase;
 }
-.info button:hover{
+.formulario button:hover {
     background-color: var(--blue);
-    margin: 2px solid #000;
-}
-.info button span {
-    margin-top: 15rem;
-    margin-left: .5rem;
-}
-.info button span svg {
-    width: .9rem;
+    border-radius: 2px solid var(--green);
+    color: #fff;
+    cursor: pointer;
+    -webkit-box-shadow: 4px 4px 22px -7px rgba(0,0,0,1);
+    -moz-box-shadow: 4px 4px 22px -7px rgba(0,0,0,1);
+    box-shadow: 4px 4px 22px -7px rgba(0,0,0,1);
+    border-radius: 1rem;
 }
 
+.formulario svg {
+    margin-left: 5px;
+    width: 1rem;
+}
+
+.resultados {
+    margin-top: -3em;
+}
 .resultados p {
-    font-size: 1rem; 
+    font-size: 1.2rem; 
     line-height: 2;
+    text-transform: uppercase;
 }
 .resultados span {
     font-size: 1rem;
-    color: #fff;
-    text-transform: uppercase;
+    color: #000;
 }
-.resultados p, span {
+.resultados p {
     font-weight: var(--fontBold);
 }
 .resultados img {
-    width: 8rem;
+    width: 9rem;
+    margin-left: 5rem;
+}
+
+.alert {
+    background-color: var(--pink);
+    padding: .3rem 5rem .3rem 5rem;
+    border-radius: 1rem;
+    margin: 5rem 0 0 5rem;
+}
+.alert span, p {
+    font-size: 1.5rem;
+    font-weight: var(--fontBold);
+    text-align: center;
+    text-transform: uppercase;
+    color: #fff;
 }
